# Zero-G-Engine

./: Cargo.toml  package-lock.json  package.json  test.json
ZeroEditor/: Cargo.toml
ZeroEditor/src/: main.rs  shader.wgsl
ZeroEditor/src/editor/: mod.rs  scene_components.rs
ZeroEditor/src/modules/: state.rs
ZeroEditor/src/ui/: components.rs  layout.rs  mod.rs  styles.rs
ZeroEngine/: Cargo.toml
ZeroEngine/src/: lib.rs
ZeroEngine/src/modules/: build.rs  mod.rs  state.rs
ZeroEngine/src/modules/ecs/: scripts.rs  systems.rs  world.rs
ZeroRuntime/: Cargo.toml
ZeroRuntime/src/: main.rs
ZeroRuntime/src/modules/: app.rs  mod.rs
assembly/: asconfig.json  context.ts  index.ts  mover.ts
src/: main.rs
src/modules/: app.rs  egui_renderer.rs  mod.rs  scenes.rs  state.rs
src/modules/ecs/: components.rs  entity.rs  mod.rs  scripts.rs  systems.rs  world.rs
src/modules/ui/: gui.rs  hub.rs  mod.rs
