[package]
name = "ZeroGPU"
version = "0.1.0"
edition = "2024"

[dependencies]
wgpu = "25.0"
bytemuck = { version = "1.4", features = ["derive"] }
winit = "0.30"
pollster = "0.4"
env_logger = "0.11.8"
glam = "0.30.5"
slotmap = "1.0.7"
wasmtime = "36.0.2"
wasm-bindgen = "0.2.101"
anyhow = "1.0.99"
egui = "0.32.2"
egui-winit = "0.32.2"
egui-wgpu = "0.32.2"


